# NullClass-Task5

./: README.md  pyproject.toml  requirements.txt
main/: Eng_French.ipynb  Eng_Spanish.ipynb  Task5.ipynb  eng_vocab.json  english_tokenizer.json  french_tokenizer.json  gui.py  spa_vocab.json
