[tool.poetry]
name = "nullclass"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
ipykernel = "^6.29.5"
gensim = "^4.3.3"
transformers = {git = "https://github.com/huggingface/transformers"}
sentencepiece = "^0.2.0"
ipywidgets = "^8.1.3"
sacremoses = "^0.1.1"
torch = {version = "^2.4.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch_cpu"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
